--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="container">
-        
-        <img src="Captain_America1.jpg" alt="">
+        <a href="Captain_America.html">
+             <img src="Captain_America1.jpg" alt="">
+        </a>
+       
         <img src="Captain Marvel.jpg" alt="">
         <img src="iron men 1.jpeg" alt="">
         <img src="iron men 2.jpg" alt="">
